# codynhanpham.github.io

./: package.json  svelte.config.js  vite.config.ts
.github/workflows/: deploy.yml
messages/: yu-en.json
project.inlang/: project_id  settings.json
src/: app.css  app.d.ts  app.html
src/content/layouts/: common.css
src/content/layouts/default/: default.css  default.svelte
src/content/layouts/resume/: resume.css  resume.svelte
src/content/types/: datetime.ts  postMetadata.ts  tags.ts
src/content/works/resume/: resume.svx
src/content/works/resume/section-entry/: index.ts  section-entry-content.svelte  section-entry-heading.svelte  section-entry-root.svelte  section-entry-title.svelte  section-entry.svelte
src/lib/: index.ts  stringprocessing.ts
src/lib-wasm/: Cargo.toml
src/lib-wasm/src/: lib.rs
src/lib-wasm/src/misc/: bf.rs
src/lib/components/blocks/barcode-input-button/: barcode-input-button.svelte  index.ts
src/lib/components/blocks/globalsearch/: bf.svelte  (+3 more)
src/lib/front-end/: NavMenu.svelte  NavMenuData.ts  utils.ts
src/lib/front-end/assets/: logo.svelte
src/routes/: +error.svelte  +layout.svelte  +page.svelte  +page.ts  appstate.svelte.ts
src/routes/_assets/components/: hero.svelte  toppick.svelte
src/routes/_assets/snippets/: hero.svelte
src/routes/about/: +page.svelte
src/routes/projects/: +page.svelte
src/routes/resume/: +page.svelte
src/routes/works/: +page.svelte
src/routes/works/highlights/: +page.svelte
src/routes/works/resume/: +page.svelte
src/service-worker/: index.ts
src/themes/: default.css
(+12 files in other folders)
