[package]
name = "lib-wasm"
version = "0.1.0"
description = "Rust library for WebAssembly @ codynhanpham.com"
authors = ["Cody Nhan Pham <contact@codynhanpham.com>"]
repository = "https://github.com/codynhanpham/codynhanpham.github.io"
edition = "2024"


[lib]
crate-type = ["cdylib"]


[dependencies]
cpc = { git = "https://github.com/probablykasper/cpc", tag = "v3.0.0"}
bincode = { version = "2.0.1", features = ["serde"] }
heliometer = "0.5.10"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
serde-wasm-bindgen = "0.4"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"


[target.'cfg(windows)'.dependencies]
fastembed = "5.0.0"
